testing/framework/resources/Advanced/Failing/mondrian/query5675.q
select alt_promotion.promo_id as c0, alt_promotion.promo_name as c1 from (SELECT * FROM (VALUES (0, CAST(NULL AS VARCHAR(6))), (1, 'Promo1')) AS t (promo_id, promo_name)) as alt_promotion where alt_promotion.promo_name is null group by alt_promotion.promo_id, alt_promotion.promo_name order by alt_promotion.promo_id ASC NULLS LAST;
